# rust_container_system

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.ko.md  IMPROVEMENTS.md  LICENSE  MIGRATION_GUIDE.md  README.ko.md  README.md  REVIEW.md
.github/workflows/: ci.yml
benches/: container_benchmarks.rs
docs/: API_REFERENCE.md  ARRAY_VALUE_GUIDE.md  BENCHMARKS.md  FEATURES.md  IMPROVEMENT_PLAN.md  PRODUCTION_QUALITY.md  PROJECT_STRUCTURE.md  README.md
docs/contributing/: TESTING.md
docs/guides/: BEST_PRACTICES.md  FAQ.md  QUICK_START.md  TROUBLESHOOTING.md
docs/performance/: BASELINE.md
examples/: basic_container.rs  concurrency.rs  dependency_injection.rs  deserialization.rs  error_handling.rs  nested_containers.rs  serialization.rs
src/: lib.rs
src/core/: container.rs  error.rs  json_v2_adapter.rs  mod.rs  value.rs  value_store.rs  value_types.rs  wire_protocol.rs
src/kcenon/: di.rs  mod.rs
src/messaging/: builder.rs  mod.rs
src/values/: array_value.rs  bytes_value.rs  container_value.rs  mod.rs  null_value.rs  primitive_values.rs  string_value.rs
tests/: binary_interop_tests.rs  integration_tests.rs  interop_tests.rs  property_tests.rs  test_long_range_checking.rs
